[project]
name = "django-forge-test"
version = "0.1.0"
description = "Génération de fixtures et tests d'API auto-générés pour Django."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Cédric Herve Youan", email = "hervecedricyouan@gmail.com" },
]
requires-python = ">=3.12"
keywords = ["django", "testing", "fixtures", "factory", "faker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "django>=5.0",
    "faker>=24.0",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/alzeph/django-forge-test.git/forge-test"
Repository = "https://github.com/alzeph/django-forge-test.git/forge-test"
Issues = "https://github.com/alzeph/django-forge-test.git/forge-test/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.6",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_test"]

# ---------------------------------------------------------------------------
# uv : dépendances de développement (séparées des deps publiées sur PyPI)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.6",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

# ---------------------------------------------------------------------------
# pytest / pytest-django
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.django_settings"